--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "self learning project",
   "main": "server.js",
+  "engines": {
+    "npm": "8.9.0"
+  },
   "scripts": {
     "client-install": "npm install --prefix client",
     "start": "node server.js",
