--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,9 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "8.9.0"
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "react": "^16.4.2",
