--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "self learning project",
   "main": "server.js",
   "engines": {
-    "npm": "8.9.0"
+    "npm": "8.9.0",
+    "node":"8.9.0"
   },
   "scripts": {
     "client-install": "npm install --prefix client",
